--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,10 @@
 version: 0.2
 
 env:
-  AWS_ECR: 348956254544.dkr.ecr.ap-northeast-2.amazonaws.com/ecspipe-image
-  IMAGE_REPO_NAME: ecspipe-image
-  CONTAINER_NAME: ecspipe-container
+  variables:
+    AWS_ECR: 348956254544.dkr.ecr.ap-northeast-2.amazonaws.com/ecspipe-image
+    IMAGE_REPO_NAME: ecspipe-image
+    CONTAINER_NAME: ecspipe-container
   
 phases:
 
