--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    AWS_ECR: 348956254544.dkr.ecr.ap-northeast-2.amazonaws.com/ecspipe-image
+    AWS_ECR: 348956254544.dkr.ecr.ap-northeast-2.amazonaws.com
     IMAGE_REPO_NAME: ecspipe-image
     CONTAINER_NAME: ecspipe-container
   
